[package]
name = "algebra_ops"
version = "0.1.0"
edition = "2024"
license = "LGPL 3.0 or later"
repository = "https://github.com/BobTheBot988/algebra_ops"
authors = ["Roberto Di Rosa"]
description = "My implementation of algebraic operation made in rust, the objective of this is for it to be able to be used as a starting base to build neural networks in rust "
readme = "README.md"
keywords = ["array", "data-structure", "multidimensional", "matrix", "blas"]
categories = ["data-structures", "science"]

[dependencies]
num-traits = "0.2.19"
[lints.rust]
# You can also configure standard rustc lints here
# unsafe_code = "forbid"

[lints.clippy]
# Sets "clippy::all" to a warning by default for ALL profiles.
# To turn this into an error for Release builds, you must run:
# cargo clippy --release -- -D warnings
all = "warn"

# You can also set specific lints
# correct_by_default = "deny"
# complexity = "warn"
